infrastructure/k8s/mattermost/mattermost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
spec:
  selector:
    app: mattermost
  ports:
    - name: http
      port: 80
      targetPort: 8065
  type: ClusterIP
